--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack",
+    "build": "NODE_ENV='production' webpack -p",
+    "deploy": "yarn build && firebase deploy",
+    "firebase-init": "firebase login && firebase init",
+
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
